new: Diffuse lighting + attenuation factor + kspot

--- a/PixelLighting/imgui.ini
+++ b/PixelLighting/imgui.ini
@@ -1,5 +1,15 @@
 [Window][Debug##Default]
-Pos=647,32
-Size=370,328
+Pos=575,28
+Size=426,408
+Collapsed=0
+
+[Window][Camera]
+Pos=10,18
+Size=409,142
+Collapsed=0
+
+[Window][Lighting]
+Pos=878,14
+Size=302,240
 Collapsed=0
 
