new: ambient + spec + normal mapping

--- a/PixelLighting/PixelLighting.vcxproj.filters
+++ b/PixelLighting/PixelLighting.vcxproj.filters
@@ -464,6 +464,7 @@
     </None>
     <None Include="res\shaders\BasicTexture.shader" />
     <None Include="res\shaders\Phong.shader" />
+    <None Include="res\shaders\PhongBumpMap.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\VertexBuffer.h">
