new: Normal mapping with TBN matrix working

--- a/PixelLighting/imgui.ini
+++ b/PixelLighting/imgui.ini
@@ -9,7 +9,12 @@ Size=409,142
 Collapsed=0
 
 [Window][Lighting]
-Pos=1002,14
-Size=683,295
+Pos=800,39
+Size=551,320
+Collapsed=0
+
+[Window][Visuals Properties]
+Pos=713,52
+Size=305,406
 Collapsed=0
 
