--- a/PixelLighting/imgui.ini
+++ b/PixelLighting/imgui.ini
@@ -4,8 +4,8 @@ Size=426,408
 Collapsed=0
 
 [Window][Camera]
-Pos=10,18
-Size=409,142
+Pos=9,12
+Size=388,142
 Collapsed=0
 
 [Window][Lighting]
@@ -16,5 +16,25 @@ Collapsed=0
 [Window][Visuals Properties]
 Pos=702,27
 Size=305,406
+Collapsed=0
+
+[Window][Material]
+Pos=815,29
+Size=199,215
+Collapsed=0
+
+[Window][Light]
+Pos=9,165
+Size=422,333
+Collapsed=0
+
+[Window][Stones]
+Pos=1002,180
+Size=357,224
+Collapsed=0
+
+[Window][Golfball]
+Pos=1002,37
+Size=335,129
 Collapsed=0
 
