--- a/PixelLighting/PixelLighting.vcxproj
+++ b/PixelLighting/PixelLighting.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\FrameBuffer.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Obj.cpp" />
@@ -165,6 +166,8 @@
     <None Include="res\shaders\BasicTexture.shader" />
     <None Include="res\shaders\Phong.shader" />
     <None Include="res\shaders\PhongBumpMap.shader" />
+    <None Include="res\shaders\PhongShadow.shader" />
+    <None Include="res\shaders\ShadowMapGen.shader" />
     <None Include="src\vendor\glm\detail\func_common.inl" />
     <None Include="src\vendor\glm\detail\func_common_simd.inl" />
     <None Include="src\vendor\glm\detail\func_exponential.inl" />
@@ -302,6 +305,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\FrameBuffer.h" />
     <ClInclude Include="src\IndexBuffer.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Obj.h" />
