update: better renderer structure for FBOs

--- a/PixelLighting/PixelLighting.vcxproj.filters
+++ b/PixelLighting/PixelLighting.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\Light.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="src\DepthOfField.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
@@ -479,6 +482,7 @@
     <None Include="res\shaders\PhongBumpMap.shader" />
     <None Include="res\shaders\ShadowMapGen.shader" />
     <None Include="res\shaders\PhongShadow.shader" />
+    <None Include="res\shaders\DepthOfField.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\VertexBuffer.h">
@@ -1277,6 +1281,12 @@
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
     <ClInclude Include="src\Light.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DepthOfField.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OpenGLHelper.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
