--- a/PixelLighting/imgui.ini
+++ b/PixelLighting/imgui.ini
@@ -4,9 +4,9 @@ Size=426,408
 Collapsed=0
 
 [Window][Camera]
-Pos=9,12
-Size=388,142
-Collapsed=1
+Pos=16,-4
+Size=396,256
+Collapsed=0
 
 [Window][Lighting]
 Pos=800,39
@@ -24,7 +24,7 @@ Size=199,215
 Collapsed=0
 
 [Window][Light]
-Pos=19,54
+Pos=643,52
 Size=346,524
 Collapsed=1
 
