--- a/PixelLighting/PixelLighting.vcxproj
+++ b/PixelLighting/PixelLighting.vcxproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
     <None Include="res\shaders\BasicTexture.shader" />
+    <None Include="res\shaders\DoF\TexToScreen.shader" />
     <None Include="res\shaders\DoF\LineBlur.shader" />
     <None Include="res\shaders\DoF\CircleOfConfusion.shader" />
     <None Include="res\shaders\DoF\finalDoF.shader" />
