--- a/PixelLighting/PixelLighting.vcxproj.filters
+++ b/PixelLighting/PixelLighting.vcxproj.filters
@@ -486,6 +486,7 @@
     <None Include="res\shaders\DoF\CircleOfConfusion.shader" />
     <None Include="res\shaders\DoF\LineBlur.shader" />
     <None Include="res\shaders\DoF\finalDoF.shader" />
+    <None Include="res\shaders\DoF\TexToScreen.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\VertexBuffer.h">
